[gd_scene load_steps=7 format=3 uid="uid://babuf0fbdot0b"]

[ext_resource type="Theme" uid="uid://dtxalj7m5sqy5" path="res://assets/themes/avoid_cave_theme.tres" id="1_cd4kw"]
[ext_resource type="Script" path="res://scenes/components/inventory/inventory_UI.gd" id="2_co3t6"]
[ext_resource type="FontFile" uid="uid://dps85q238gydx" path="res://assets/other/Kenney Mini.ttf" id="3_diqln"]
[ext_resource type="Texture2D" uid="uid://27vnwkjoysxe" path="res://assets/textures/raw/genericItems_spritesheet_colored.png" id="4_4ictq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dmeyd"]
atlas = ExtResource("4_4ictq")
region = Rect2(366, 964, 95, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e4xs"]
atlas = ExtResource("4_4ictq")
region = Rect2(692, 1068, 56, 107)

[node name="InventoryPanel" type="Panel"]
anchors_preset = -1
anchor_right = 0.266667
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cd4kw")
script = ExtResource("2_co3t6")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
tab_alignment = 1

[node name="Items" type="ItemList" parent="MarginContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hovered_color = Color(0.482353, 0.65098, 1, 1)
theme_override_colors/font_selected_color = Color(0.835294, 0, 0.964706, 1)
theme_override_fonts/font = ExtResource("3_diqln")
theme_override_font_sizes/font_size = 8
allow_reselect = true
allow_rmb_select = true
text_overrun_behavior = 0
item_count = 3
same_column_width = true
fixed_icon_size = Vector2i(16, 16)
item_0/text = "Key"
item_0/icon = SubResource("AtlasTexture_dmeyd")
item_1/text = "Phone"
item_1/icon = SubResource("AtlasTexture_8e4xs")
item_2/text = ""

[node name="Notes" type="ItemList" parent="MarginContainer/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1

[node name="Inventory" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_cd4kw")

[connection signal="mouse_exited" from="." to="." method="_on_inventory_mouse_exit"]
[connection signal="item_clicked" from="MarginContainer/TabContainer/Items" to="Inventory" method="_on_item_list_item_clicked"]
